--- a/app/views/admin/shared/_navbar-admin.html.erb
+++ b/app/views/admin/shared/_navbar-admin.html.erb
@@ -6,7 +6,7 @@
     <%= link_to '<i class="fas fa-users"></i> Gestion des utilisateurs'.html_safe, admin_users_path, class: "nav-item nav-link", id: 'admin_users' %>
     <%= link_to '<i class="fas fa-newspaper"></i> Gestion des annonces'.html_safe, admin_annonces_path, class: "nav-item nav-link", id: 'admin_annonces' %>
     <%= link_to '<i class="fas fa-exclamation-triangle"></i> Gestion des conflits'.html_safe, admin_conflicts_path, class: "nav-item nav-link", id: 'admin_conflits' %>
-    <%= link_to '<i class="fab fa-stripe"></i> Gestion de stripe'.html_safe, admin_conflicts_path, class: "nav-item nav-link", id: 'admin_stripe' %>
+    <%= link_to '<i class="fab fa-stripe-s"></i> Gestion de stripe'.html_safe, admin_conflicts_path, class: "nav-item nav-link", id: 'admin_stripe' %>
   </nav>
 <hr class="my-3">
 </div>
