--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,33 +1,26 @@
 <div class="container">
-  <h2><i class="fa fa-user"></i> (Admin) Informations de <%= @user.pseudo %></h2>
+  <h2><i class="fa fa-user"></i> (Admin) Modification de <%= @user.pseudo %></h2>
   <hr>
   <div class="form-standard">
-        <%= simple_form_for(@user) do |f| %>
+        <%= simple_form_for(@user, url: admin_user_path) do |f| %>
           <%= f.error_notification %>
-          <%= f.input :pseudo, disabled: true, autofocus: true, label: "Pseudo" %>
-          <%= f.input :first_name, disabled: true, autofocus: true, label: "Prénom" %>
-          <%= f.input :last_name, disabled: true, autofocus: true, label: "Nom" %>
-          <%= f.input :email, disabled: true, autofocus: true %>
+          <%= f.input :pseudo, autofocus: true, label: "Pseudo" %>
+          <%= f.input :first_name, autofocus: true, label: "Prénom" %>
+          <%= f.input :last_name, autofocus: true, label: "Nom" %>
+          <%= f.input :email, autofocus: true %>
           <%= f.input :phone, required: true, autofocus: true, label: "Téléphone", error: 'Vous devez enter un numéro de téléphone.' %>
           <hr>
-          <%= f.input :pays, label: 'Pays', placeholder: 'France', required: true, autofocus: true, error: 'Vous devez entrer un pays.', disabled: true %>
+          <%= f.input :pays, label: 'Pays', placeholder: 'France', required: true, autofocus: true, error: 'Vous devez entrer un pays.' %>
           <%= f.input :region, collection: {'Alsace' => 'Alsace', 'Aquitaine' => 'Aquitaine', 'Auvergne' => 'Auvergne', 'Basse Normandie' => 'Basse Normandie', 'Bourgogne' => 'Bourgogne', 'Bretagne' => 'Bretagne', 'Centre' => 'Centre', 'Champagne-Ardenne' => 'Champagne-Ardenne', 'Corse' => 'Corse', 'Franche-Comté' => 'Franche-Comté', 'Haute Normandie' => 'Haute Normandie', 'Ile-de-France' => 'Ile-de-France', 'Languedoc-Rousillon' => 'Languedoc-Rousillon', 'Limousin' => 'Limousin', 'Lorraine' => 'Lorraine', 'Midi-Pyrénées' => 'Midi-Pyrénées', 'Nord-Pas-de-Calais' => 'Nord-Pas-de-Calais', 'Pays de la Loire' => 'Pays de la Loire', 'Picardie' => 'Picardie', 'Poitou-Charentes' => 'Poitou-Charentes', 'Provences-Alpe-Cote-Azur' => 'Provences-Alpe-Cote-Azur', 'Rhone-Alpes' => 'Rhone-Alpes', 'Régions outre mer' => 'Région outre mer', 'Guadeloupe' => 'Guadeloupe', 'Martinique' => 'Martinique', 'Guyane' => 'Guyane', 'La Réunion' => 'La Réunion', 'Mayotte' => 'Mayotte'}, label: 'Région', required: true, autofocus: true %>
           <%= f.input :ville, label: 'Ville', required: true, autofocus: true, error: 'Vous devez entrer une ville.' %>
           <%= f.input :cp, label: 'Code Postal', required: true, autofocus: true, error: 'Vous devez entrer un code postal.' %>
           <%= f.input :adresse, label: 'Adresse', required: true, autofocus: true, error: 'Vous devez entrer une adresse.' %>
           <hr>
-          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-            <p>En attente de confirmation pour: <%= resource.unconfirmed_email %></p>
-          <% end %>
           <%= f.input :password, autocomplete: "off", placeholder: "Laisser vide si vous ne souhaitez pas le changer", required: false, label: 'Mot de passe' %>
           <%= f.input :password_confirmation, required: false, placeholder: "Laisser vide si vous ne souhaitez pas le changer", label: 'Confirmation mot de passe' %>
           <hr>
-          <%= f.input :current_password, placeholder: "Nous avons besoin de votre mot de passe actuel pour effectuer les changements", required: true, label: 'Mot de passe actuel', error: 'Nous avons besoin de votre mot de passe actuel pour effectuer les changements.' %>
+<!--           <%= f.input :current_password, placeholder: @user.password, required: true, label: 'Mot de passe actuel', error: 'Nous avons besoin de votre mot de passe actuel pour effectuer les changements.', value: @user.password %> -->
           <%= f.button :submit, "Mettre à jour", class: "btn btn-success" %>
         <% end %>
-
-        <hr>
-
-        <%= link_to "Supprimer mon compte", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Etes vous sur de vouloir supprimer votre compte ?" }, method: :delete %>
   </div>
 </div>
