--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -5,7 +5,7 @@
       <div class="form-standard">
         <h2><i class="fa fa-user"></i> (Admin) Créé un utilisateur</h2>
         <hr>
-        <%= simple_form_for(@user, url: new_user_registration_path) do |f| %>
+        <%= simple_form_for(User.new, :url => {:action => "create"}) do |f| %>
           <%= f.error_notification %>
 
           <div class="form-inputs">
