--- a/app/assets/stylesheets/layouts/_forms.scss
+++ b/app/assets/stylesheets/layouts/_forms.scss
@@ -26,6 +26,15 @@
   transition: all 0.5s ease-in-out;
 }
 
+
+.form-search-mobile {
+  // height: 90%;
+  // width: 50%;
+  background:rgb(255, 255, 255) none repeat scroll 0% 0%;
+  padding: 32px;
+  transition: all 0.5s ease-in-out;
+}
+
 .btn-search-home {
   height: 44px;
   font-weight:bold;
