--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  box-shadow: 0 -5px 5px -5px #999999;
+  // box-shadow: 0 -5px 5px -5px #999999;
   color: rgba(0,0,0,0.3);
 }
 .footer-links {
@@ -22,6 +22,28 @@
 .footer-links a:hover {
   opacity: 1;
 }
+
+.footer-mobile {
+  background: #F4F4F4;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  padding: 0px 50px;
+  // box-shadow: 0 -5px 5px -5px #999999;
+  color: rgba(0,0,0,0.3);
+}
+.footer-mobile a {
+  color: black;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
+}
+.footer-mobile a:hover {
+  opacity: 1;
+}
+
 .footer .fa-heart {
   color: #D23333;
 }
