--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,27 +1,43 @@
 <div class="content-home">
-  <div class="banner">
-    <div class="banner-content">
-      <div class="container">
-        <div class="row mx-2">
-          <div class="col-md-6 form-search">
-            <h3>Trouvez des objets à échanger sur Lebontroc</h3>
-            <p>Faites une recherche pour trouver des annonces ou voir les propositions pour un objet que vous souhaitez échanger.</p>
-            <%= simple_form_for :search, url: annonces_path, method: :get, class: 'form-group' do |f| %>
-              <p>Que recherchez vous ?</p>
-              <%= f.input :produit, required: true, autofocus: true, label: false, placeholder: 'Exemple: Iphone X' %>
-              <p>Dans quelle région ?</p>
-              <%= f.input :localisation, :include_blank => 'Sélectionnez une région',collection: {'Toute la France' => 'France','Alsace' => 'Alsace', 'Aquitaine' => 'Aquitaine', 'Auvergne' => 'Auvergne', 'Basse Normandie' => 'Basse Normandie', 'Bourgogne' => 'Bourgogne', 'Bretagne' => 'Bretagne', 'Centre' => 'Centre', 'Champagne-Ardenne' => 'Champagne-Ardenne', 'Corse' => 'Corse', 'Franche-Comté' => 'Franche-Comté', 'Haute Normandie' => 'Haute Normandie', 'Ile-de-France' => 'Ile-de-France', 'Languedoc-Rousillon' => 'Languedoc-Rousillon', 'Limousin' => 'Limousin', 'Lorraine' => 'Lorraine', 'Midi-Pyrénées' => 'Midi-Pyrénées', 'Nord-Pas-de-Calais' => 'Nord-Pas-de-Calais', 'Pays de la Loire' => 'Pays de la Loire', 'Picardie' => 'Picardie', 'Poitou-Charentes' => 'Poitou-Charentes', 'Provences-Alpe-Cote-Azur' => 'Provences-Alpe-Cote-Azur', 'Rhone-Alpes' => 'Rhone-Alpes', 'Régions outre mer' => 'Région outre mer', 'Guadeloupe' => 'Guadeloupe', 'Martinique' => 'Martinique', 'Guyane' => 'Guyane', 'La Réunion' => 'La Réunion', 'Mayotte' => 'Mayotte'}, label:false, required: true, class: 'form-control' %>
-              <p>Type de recherche:</p>
-              <%= f.input :where, :include_blank => 'Sélectionnez un type de recherche', collection: {"Voir les annonces pour ce produit" => 1, "Voir les offres pour un produit que vous voulez échanger" => 2}, label:false, required: true, class: 'form-control' %>
-              <%= f.button :submit, "Rechercher", class: 'btn btn-primary btn-lg btn-search-home form-control', style: 'width:100%'%>
-            <% end %>
-            <!-- <a href="#description" title="En savoir plus"><i class="far fa-arrow-alt-circle-down"></i></a> -->
+  <div class="d-none d-lg-block">
+    <div class="banner">
+      <div class="banner-content">
+        <div class="container">
+          <div class="row mx-2">
+            <div class="col-md-6 form-search">
+              <h3>Trouvez des objets à échanger sur Lebontroc</h3>
+              <p>Faites une recherche pour trouver des annonces ou voir les propositions pour un objet que vous souhaitez échanger.</p>
+              <%= simple_form_for :search, url: annonces_path, method: :get, class: 'form-group' do |f| %>
+                <p>Que recherchez vous ?</p>
+                <%= f.input :produit, required: true, autofocus: true, label: false, placeholder: 'Exemple: Iphone X' %>
+                <p>Dans quelle région ?</p>
+                <%= f.input :localisation, :include_blank => 'Sélectionnez une région',collection: {'Toute la France' => 'France','Alsace' => 'Alsace', 'Aquitaine' => 'Aquitaine', 'Auvergne' => 'Auvergne', 'Basse Normandie' => 'Basse Normandie', 'Bourgogne' => 'Bourgogne', 'Bretagne' => 'Bretagne', 'Centre' => 'Centre', 'Champagne-Ardenne' => 'Champagne-Ardenne', 'Corse' => 'Corse', 'Franche-Comté' => 'Franche-Comté', 'Haute Normandie' => 'Haute Normandie', 'Ile-de-France' => 'Ile-de-France', 'Languedoc-Rousillon' => 'Languedoc-Rousillon', 'Limousin' => 'Limousin', 'Lorraine' => 'Lorraine', 'Midi-Pyrénées' => 'Midi-Pyrénées', 'Nord-Pas-de-Calais' => 'Nord-Pas-de-Calais', 'Pays de la Loire' => 'Pays de la Loire', 'Picardie' => 'Picardie', 'Poitou-Charentes' => 'Poitou-Charentes', 'Provences-Alpe-Cote-Azur' => 'Provences-Alpe-Cote-Azur', 'Rhone-Alpes' => 'Rhone-Alpes', 'Régions outre mer' => 'Région outre mer', 'Guadeloupe' => 'Guadeloupe', 'Martinique' => 'Martinique', 'Guyane' => 'Guyane', 'La Réunion' => 'La Réunion', 'Mayotte' => 'Mayotte'}, label:false, required: true, class: 'form-control' %>
+                <p>Type de recherche:</p>
+                <%= f.input :where, :include_blank => 'Sélectionnez un type de recherche', collection: {"Voir les annonces pour ce produit" => 1, "Voir les offres pour un produit que vous voulez échanger" => 2}, label:false, required: true, class: 'form-control' %>
+                <%= f.button :submit, "Rechercher", class: 'btn btn-primary btn-lg btn-search-home form-control', style: 'width:100%'%>
+              <% end %>
+              <!-- <a href="#description" title="En savoir plus"><i class="far fa-arrow-alt-circle-down"></i></a> -->
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
+  <div class="form-search-mobile d-block d-lg-none">
+      <h3>Trouvez des objets à échanger sur Lebontroc</h3>
+      <p>Faites une recherche pour trouver des annonces ou voir les propositions pour un objet que vous souhaitez échanger.</p>
+      <%= simple_form_for :search, url: annonces_path, method: :get, class: 'form-group' do |f| %>
+        <p>Que recherchez vous ?</p>
+        <%= f.input :produit, required: true, autofocus: true, label: false, placeholder: 'Exemple: Iphone X' %>
+        <p>Dans quelle région ?</p>
+        <%= f.input :localisation, :include_blank => 'Sélectionnez une région',collection: {'Toute la France' => 'France','Alsace' => 'Alsace', 'Aquitaine' => 'Aquitaine', 'Auvergne' => 'Auvergne', 'Basse Normandie' => 'Basse Normandie', 'Bourgogne' => 'Bourgogne', 'Bretagne' => 'Bretagne', 'Centre' => 'Centre', 'Champagne-Ardenne' => 'Champagne-Ardenne', 'Corse' => 'Corse', 'Franche-Comté' => 'Franche-Comté', 'Haute Normandie' => 'Haute Normandie', 'Ile-de-France' => 'Ile-de-France', 'Languedoc-Rousillon' => 'Languedoc-Rousillon', 'Limousin' => 'Limousin', 'Lorraine' => 'Lorraine', 'Midi-Pyrénées' => 'Midi-Pyrénées', 'Nord-Pas-de-Calais' => 'Nord-Pas-de-Calais', 'Pays de la Loire' => 'Pays de la Loire', 'Picardie' => 'Picardie', 'Poitou-Charentes' => 'Poitou-Charentes', 'Provences-Alpe-Cote-Azur' => 'Provences-Alpe-Cote-Azur', 'Rhone-Alpes' => 'Rhone-Alpes', 'Régions outre mer' => 'Région outre mer', 'Guadeloupe' => 'Guadeloupe', 'Martinique' => 'Martinique', 'Guyane' => 'Guyane', 'La Réunion' => 'La Réunion', 'Mayotte' => 'Mayotte'}, label:false, required: true, class: 'form-control' %>
+        <p>Type de recherche:</p>
+        <%= f.input :where, :include_blank => 'Sélectionnez un type de recherche', collection: {"Voir les annonces pour ce produit" => 1, "Voir les offres pour un produit que vous voulez échanger" => 2}, label:false, required: true, class: 'form-control' %>
+        <%= f.button :submit, "Rechercher", class: 'btn btn-primary btn-lg btn-search-home form-control', style: 'width:100%'%>
+      <% end %>
+      <div class="text-center"><a href="#description" title="En savoir plus"><i class="fas fa-chevron-down"></i></a></div>
+    </div>
+  </div>
   <% if @annonces.nil? %>
   <% else %>
     <div class="container description-home">
@@ -29,12 +45,12 @@
       <hr>
       <div class="flex-cards-home">
         <% @annonces.each do |annonce| %>
-          <div class="card card-spacing-home standard-hover-shadow mb-2" style="width: 18rem;">
-            <img class="card-img-top" src="<%= annonce.photo %>" alt="Card image cap">
+          <div class="card card-spacing-home standard-hover-shadow">
+            <%= cl_image_tag annonce.photo, alt: "Image", class: 'card-img-top', height: 225, crop: :scale %>
             <div class="card-body">
-              <h5 class="card-title"><%= annonce.titre %> contre <%= annonce.contre %></h5>
+              <h5 class="card-title"><%= annonce.titre.first(20) %> contre <%= annonce.contre.first(20) %></h5>
               <p class="card-text"><%= annonce.description.first(20) %>...</p>
-              <%= link_to "Voir l'annonce", annonce_path(annonce), class: 'btn btn-primary' %>
+              <%= link_to "Voir l'annonce", annonce_path(annonce), class: 'btn btn-primary btn-block' %>
             </div>
           </div>
         <% end %>
