--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,45 +5,47 @@
   <% end %>
 
   <!-- Right Navigation -->
-  <div class="navbar-lebontroc-right d-none d-lg-block">
-    <%= link_to '<i class="far fa-newspaper"></i> Annonces'.html_safe, annonces_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
-    <% if user_signed_in? %>
+  <div class="d-none d-md-block">
+    <div class="navbar-lebontroc-right">
+      <%= link_to '<i class="far fa-newspaper"></i> Annonces'.html_safe, annonces_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
+      <% if user_signed_in? %>
 
-      <!-- Links when logged in -->
-      <%= link_to '<i class="fa fa-plus"></i> Déposer une annonce'.html_safe, new_annonce_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
-      <%= link_to '<i class="fa fa-list"></i> Mes annonces'.html_safe, vos_annonces_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
-      <% if current_user.admin == true %>
-       <%= link_to '<i class="fas fa-user-shield"></i> Panel admin'.html_safe, admin_dashboard_index_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
-      <% end %>
+        <!-- Links when logged in -->
+        <%= link_to '<i class="fa fa-plus"></i> Déposer une annonce'.html_safe, new_annonce_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
+        <%= link_to '<i class="fa fa-list"></i> Mes annonces'.html_safe, vos_annonces_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
+        <% if current_user.admin == true %>
+         <%= link_to '<i class="fas fa-user-shield"></i> Panel admin'.html_safe, admin_dashboard_index_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
+        <% end %>
 
-      <!-- Avatar with dropdown menu -->
-      <div class="navbar-lebontroc-item">
-        <div class="dropdown">
-          <%= link_to '<i class="fa fa-user"></i>'.html_safe, "#", class: "avatar dropdown-toggle", id: "navbar-lebontroc-menu", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-lebontroc-dropdown-menu">
-            <li>
-              <%= link_to edit_user_registration_path do %>
-                <i class="fa fa-cog"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out-alt"></i>  <%= t(".sign_out", default: "Log out") %>
-              <% end %>
-            </li>
-          </ul>
+        <!-- Avatar with dropdown menu -->
+        <div class="navbar-lebontroc-item">
+          <div class="dropdown">
+            <%= link_to '<i class="fa fa-user"></i> Mon compte'.html_safe, "#", class: "navbar-lebontroc-link dropdown-toggle", id: "navbar-lebontroc-menu", "data-toggle" => "dropdown" %>
+            <ul class="dropdown-menu dropdown-menu-right navbar-lebontroc-dropdown-menu">
+              <li>
+                <%= link_to edit_user_registration_path do %>
+                  <i class="fa fa-cog"></i> <%= t(".profile", default: "Profile") %>
+                <% end %>
+              </li>
+              <li>
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                  <i class="fa fa-sign-out-alt"></i>  <%= t(".sign_out", default: "Log out") %>
+                <% end %>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    <% else %>
-      <!-- Login link (when logged out) -->
-      <%= link_to t(".sign_in", default: "Connexion"), new_user_session_path, class: "navbar-lebontroc-item navbar-lebontroc-link btn btn-primary", style: 'color:white;' %>
-      <%= link_to "Inscription", new_user_registration_path, class: "navbar-lebontroc-item navbar-lebontroc-link btn btn-primary", style: 'color:white;margin-left:10px;' %>
-    <% end %>
+      <% else %>
+        <!-- Login link (when logged out) -->
+        <%= link_to t(".sign_in", default: "Connexion"), new_user_session_path, class: "navbar-lebontroc-item navbar-lebontroc-link btn btn-primary", style: 'color:white;' %>
+        <%= link_to "Inscription", new_user_registration_path, class: "navbar-lebontroc-item navbar-lebontroc-link btn btn-primary", style: 'color:white;margin-left:10px;' %>
+      <% end %>
+    </div>
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
 
-  <div class="navbar-lebontroc-item d-block d-lg-none">
+  <div class="navbar-lebontroc-item d-block d-md-none">
     <div class="dropdown flex-nav-mobile">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-lebontroc-dropdown-menu">
