--- a/app/views/annonces/new.html.erb
+++ b/app/views/annonces/new.html.erb
@@ -22,7 +22,7 @@
       </div>
       <hr>
       <div class="form-group">
-        <%= f.label :photo, 'Choissisez au moins une photo de votre produit depuis votre ordinateur:' %>
+        <%= f.label :photo, 'Choissisez au moins une photo de votre produit depuis votre ordinateur: (minimum 1 photo)' %>
         <%= f.input :photo, label: false, required: true %>
 
         <%= f.input :photo2, label: false, required: false %>
