--- a/app/assets/stylesheets/layouts/_utilities.scss
+++ b/app/assets/stylesheets/layouts/_utilities.scss
@@ -31,7 +31,25 @@ h1, h2, h3 { margin-top: 20px;}
 .flex {
   display: flex;
   align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
+}
+
+.flex-around {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.flex-evenly {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .flex h1 {
