--- a/app/views/admin/annonces/index.html.erb
+++ b/app/views/admin/annonces/index.html.erb
@@ -26,6 +26,7 @@
             <li><%= link_to "VOIR L'ANNONCE", annonce_path(annonce) %></li>
             <li><%= link_to "",  edit_admin_annonce_path(annonce), title: "Modifier l'annonce", :class => "fa fa-pencil-alt" %></li>
             <li><%= link_to "", admin_annonce_path(annonce), method: :delete, title: "Supprimer l'annonce", data: { confirm: "Etes vous sur de vouloir supprimer cette annonce ?" }, :class => "far fa-trash-alt"%></li>
+            <li><%= link_to "", edit_admin_user_path(annonce.user), title: "Voir l'utilisateur qui à posté cette annonce: #{annonce.user.pseudo}", :class => "fas fa-user"%></li>
    <!--          <li><%= link_to "", admin_annonce_path(annonce, status: 2), method: :patch, title: "Accepter l'annonce", data: { confirm: "Etes vous sur de vouloir accepter et publier cette annonce ?" }, :class => "far fa-check"%></li>
             <li><%= link_to "", admin_annonce_path(annonce, status: 0), method: :patch, title: "Mettre l'annonce en attente", data: { confirm: "Etes vous sur de vouloir mettre cette annonce en attente ?" }, :class => "far fa-clock"%></li>
             <li><%= link_to "", admin_annonce_path(annonce, status: 1), method: :patch, title: "Refuser l'annonce", data: { confirm: "Etes vous sur de vouloir refuser cette annonce ?" }, :class => "far fa-times"%></li> -->
@@ -49,6 +50,7 @@
             <li><%= link_to "VOIR L'ANNONCE", annonce_path(annonce) %></li>
             <li><%= link_to "",  edit_admin_annonce_path(annonce), title: "Modifier l'annonce", :class => "fa fa-pencil-alt" %></li>
             <li><%= link_to "", admin_annonce_path(annonce), method: :delete, title: "Supprimer l'annonce", data: { confirm: "Etes vous sur de vouloir supprimer cette annonce ?" }, :class => "far fa-trash-alt"%></li>
+            <li><%= link_to "", edit_admin_user_path(annonce.user), title: "Voir l'utilisateur qui à posté cette annonce: #{annonce.user.pseudo}", :class => "fas fa-user"%></li>
             <li><%= link_to "", admin_annonce_path(annonce, status: 2), method: :patch, title: "Accepter l'annonce", data: { confirm: "Etes vous sur de vouloir accepter et publier cette annonce ?" }, :class => "far fa-check"%></li>
             <li><%= link_to "", admin_annonce_path(annonce, status: 1), method: :patch, title: "Refuser l'annonce", data: { confirm: "Etes vous sur de vouloir refuser cette annonce ?" }, :class => "far fa-times"%></li>
           </ul>
@@ -71,6 +73,7 @@
             <li><%= link_to "VOIR L'ANNONCE", annonce_path(annonce) %></li>
             <li><%= link_to "",  edit_admin_annonce_path(annonce), title: "Modifier l'annonce", :class => "fa fa-pencil-alt" %></li>
             <li><%= link_to "", admin_annonce_path(annonce), method: :delete, title: "Supprimer l'annonce", data: { confirm: "Etes vous sur de vouloir supprimer cette annonce ?" }, :class => "far fa-trash-alt"%></li>
+            <li><%= link_to "", edit_admin_user_path(annonce.user), title: "Voir l'utilisateur qui à posté cette annonce: #{annonce.user.pseudo}", :class => "fas fa-user"%></li>
             <li><%= link_to "", admin_annonce_path(annonce, status: 0), method: :patch, title: "Mettre l'annonce en attente", data: { confirm: "Etes vous sur de vouloir mettre cette annonce en attente ?" }, :class => "far fa-clock"%></li>
             <li><%= link_to "", admin_annonce_path(annonce, status: 1), method: :patch, title: "Refuser l'annonce", data: { confirm: "Etes vous sur de vouloir refuser cette annonce ?" }, :class => "far fa-times"%></li>
           </ul>
@@ -93,6 +96,7 @@
             <li><%= link_to "VOIR L'ANNONCE", annonce_path(annonce) %></li>
             <li><%= link_to "",  edit_admin_annonce_path(annonce), title: "Modifier l'annonce", :class => "fa fa-pencil-alt" %></li>
             <li><%= link_to "", admin_annonce_path(annonce), method: :delete, title: "Supprimer l'annonce", data: { confirm: "Etes vous sur de vouloir supprimer cette annonce ?" }, :class => "far fa-trash-alt"%></li>
+            <li><%= link_to "", edit_admin_user_path(annonce.user), title: "Voir l'utilisateur qui à posté cette annonce: #{annonce.user.pseudo}", :class => "fas fa-user"%></li>
             <li><%= link_to "", admin_annonce_path(annonce, status: 0), method: :patch, title: "Mettre l'annonce en attente", data: { confirm: "Etes vous sur de vouloir mettre cette annonce en attente ?" }, :class => "far fa-clock"%></li>
             <li><%= link_to "", admin_annonce_path(annonce, status: 2), method: :patch, title: "Accepter l'annonce", data: { confirm: "Etes vous sur de vouloir accepter et publier cette annonce ?" }, :class => "far fa-check"%></li>
           </ul>
