--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -59,12 +59,12 @@
            <li><%= link_to '<i class="fas fa-user-shield"></i> Panel admin'.html_safe, admin_dashboard_index_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
           <% end %>
           <li>
-            <%= link_to edit_user_registration_path do %>
+            <%= link_to edit_user_registration_path, class: "navbar-lebontroc-item navbar-lebontroc-link" do %>
               <i class="fa fa-cog"></i> <%= t(".profile", default: "Profile") %>
             <% end %>
           </li>
           <li>
-            <%= link_to destroy_user_session_path, method: :delete do %>
+            <%= link_to destroy_user_session_path, class: "navbar-lebontroc-item navbar-lebontroc-link", method: :delete do %>
               <i class="fa fa-sign-out-alt"></i> <%= t(".sign_out", default: "Log out") %>
             <% end %>
           </li>
