--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -11,21 +11,19 @@
         <% user = User.find(message.user_id) %>
           <div class="my-2">
             <% if user == current_user %>
-              <div class="text-left"><strong>Moi</strong> <span style="font-weight:lighter;">
-                <%= message.message_time %>
-<!--                  <% if message.read %>
-                  - <i class="fas fa-check" style="color:green;"></i> Vu
-                <% end %>
- -->                </span></div>
-              <div class="text-left"><%= message.body %></div>
+              <div class="message-sender">
+                <div class="text-left">
+                  <strong>Moi</strong> <span style="font-weight:lighter;"><%= message.message_time %></span>
+                </div>
+                <div class="text-left"><%= message.body %></div>
+              </div>
             <% else %>
-                <div class="text-right"><strong><%= user.pseudo %></strong> <span style="font-weight:lighter;">
-                <%= message.message_time %>
-<!--                  <% if message.read %>
-                 - <i class="fas fa-check" style="color:green;"></i> Vu
-                <% end %> -->
-                </span></div>
-              <div class="text-right"><%= message.body %></div>
+              <div class="message-receiver">
+                <div class="text-right">
+                  <strong><%= user.pseudo %></strong> <span style="font-weight:lighter;"><%= message.message_time %></span>
+                </div>
+                <div class="text-right"><%= message.body %></div>
+              </div>
             <% end %>
           </div>
       <% end %>
@@ -33,13 +31,12 @@
   </div>
 
   <%= simple_form_for [@conversation, @message], html: {class: "my-2"} do |f| %>
-    <div class="form-group">
-      <%= f.text_area :body, class: "form-control" %>
+    <div class="input-group mb-3">
+      <%= f.text_field :body, class: "form-control", placeholder: "Message..." %>
+    <div class="input-group-append">
+      <%= f.submit 'Send', class: "btn btn-outline-primary" %>
     </div>
-      <%= f.text_field :user_id, value: current_user.id, type: "hidden"  %>
-    <div>
-      <%= f.submit "Envoyer", class: "btn btn-primary" %>
     </div>
-
+    <%= f.text_field :user_id, value: current_user.id, type: "hidden"  %>
   <% end %>
 </div>
